--- a/index.html
+++ b/index.html
@@ -18,8 +18,14 @@
                     <h2 id="cur_date" class="time-font"></h2>
                 </div>
             </div>
-            <div class="rain">
-                
+            <div class="rain"></div>
+            <div class="popupResolution">
+                <div class="popup">
+                    <div class="settings popupTemplate">
+                        <h1>Settings</h1>
+                        <button class="squareButton">x</button>
+                    </div>
+                </div>
             </div>
         </body>
         <script src="time.js"></script>
