--- a/index.html
+++ b/index.html
@@ -7,27 +7,41 @@
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Anta&display=swap" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
             <title>Hollow Tree</title>
         </head>
 
         <body>
             <div class="container">
-                <br>
                 <div class="time">
                     <h1 id="cur_time" class="time-font"></h1>
                     <h2 id="cur_date" class="time-font"></h2>
+                </div>
+                <div class="buttons">
+                    <button id="settingsButton" class="squareButton"></button>
+                    <button id="settingsButton" class="squareButton"></button>
+                    <button id="settingsButton" class="squareButton"></button>
                 </div>
             </div>
             <div class="rain"></div>
             <div class="popupResolution">
                 <div class="popup">
-                    <div class="settings popupTemplate">
-                        <h1>Settings</h1>
-                        <button class="squareButton">x</button>
+                    <div id="popupGrid">
+                        <div class="settings popupTemplate">
+                            <h1 id="popupTitle"></h1>
+                            <button id="popupClose" class="squareButton">X</button>
+                        </div>
+                        <div class="popupContent">
+                            <div class="setting_bool setting_standard">
+                                <p class=""></p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </body>
+        <script src="popup.js" type="module"></script>
+        <script src="settings.js" type="module"></script>
         <script src="time.js"></script>
         <script src="rain.js"></script>
     </html>
